[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Martin Kjellberg <martin@martinkjellberg.com>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
requests = "^2.28.1"
ipython = "^8.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
